--- a/nginx-unicorn-rails/Dockerfile
+++ b/nginx-unicorn-rails/Dockerfile
@@ -10,8 +10,7 @@ RUN apt-get install -qq -y nodejs
 RUN apt-get install -qq -y software-properties-common
 
 # Install Nginx.
-RUN add-apt-repository -y ppa:nginx/stable
-RUN apt-get update
+RUN add-apt-repository -y ppa:nginx/stable && apt-get update
 RUN apt-get install -qq -y nginx=1.8.0-1+trusty1
 RUN echo "\ndaemon off;" >> /etc/nginx/nginx.conf
 RUN chown -R www-data:www-data /var/lib/nginx
@@ -34,7 +33,7 @@ RUN apt-get install -qq -y libmysqlclient-dev
 WORKDIR /app
 ONBUILD ADD Gemfile /app/Gemfile
 ONBUILD ADD Gemfile.lock /app/Gemfile.lock
-ONBUILD RUN bundle install --without development test
+ONBUILD RUN bundle install
 ONBUILD ADD . /app
 
 # Add default unicorn config
@@ -42,7 +41,3 @@ ADD unicorn.rb /app/config/unicorn.rb
 
 # Add default foreman config
 ADD Procfile /app/Procfile
-
-ENV RAILS_ENV production
-
-CMD bundle exec rake assets:precompile && foreman start -f Procfile
