--- a/ubuntu-core/Dockerfile
+++ b/ubuntu-core/Dockerfile
@@ -1,7 +1,11 @@
 FROM ubuntu:14.04.3
 MAINTAINER David Elner <david@davidelner.com>
 
-RUN apt-get update
-
 # Install core utilities
-RUN apt-get install -y vim screen lsof tcpdump iptraf
+RUN apt-get update -q && \
+    apt-get install -qy vim screen lsof tcpdump iptraf --no-install-recommends &&\
+
+    # Then cleanup
+    apt-get clean && \
+    cd /var/lib/apt/lists && rm -fr *Release* *Sources* *Packages* && \
+    truncate -s 0 /var/log/*log
