Fixed: Applications not loading from missing secrets

--- a/nginx-unicorn-rails/both/docker-compose.yml
+++ b/nginx-unicorn-rails/both/docker-compose.yml
@@ -8,6 +8,7 @@ web:
   build: .
   dockerfile: Dockerfile-dev
   command: ./script/start.sh
+  env_file: .env.development
   # Mounts your host directory as the application, for live editing
   volumes:
     - .:/app
