--- a/nginx-unicorn-rails/development-compose/docker-compose.yml
+++ b/nginx-unicorn-rails/development-compose/docker-compose.yml
@@ -8,6 +8,7 @@ web:
   build: .
   dockerfile: Dockerfile
   command: ./script/start.sh
+  env_file: .env.development
   # Mounts your host directory as the application, for live editing
   volumes:
     - .:/app
